corrigido erro do css

--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
 </head>
 
 <body>
-
-  <img src="./assets/pexels-pavel-danilyuk-7594162.jpg" class="roleta">
     <div>
-        <main class="wrapper">
-            <h1><b>DevSorteio</b></h1>
-            <br>
-            <br>
-            <p>Sortear um número</p>
-            <input placeholder="entre" type="number" class="input-min">
-            <input placeholder="e" type="number" class="input-max">
-            <button onclick=generateNumber()>Sortear</button>
-        </main>
+        <h1>DevSorteio</h1>
+        <br>
+        <br>
+        <p>Sortear um número</p>
+        <input placeholder="entre" type="number" class="input-min">
+        <input placeholder="e" type="number" class="input-max">
+        <button onclick=generateNumber()>Sortear</button>
+     
 <section>
     <p class="result-text"></p>
 </section>
